# freg-quality-metrics

./: .gitignore  .pre-commit-config.yaml  .pycrunch-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  app.py  delete.py  pyproject.toml  run.py  sonar-project.properties
.github/workflows/: main.yml
api/: bigquery.py
app/: app.py  logging.config  main.py
freg_quality_metrics/: __init__.py  app.py  bigquery.py  config.py  logging.config  metrics.py  scheduler.py
pipelines/: azure-pipeline.yaml
src/freg_quality_metrics/: app.py  config.py
tests/: conftest.py  test_bigquery.py  test_health.py
