[tool.poetry]
name = "freg-quality-metrics"
version = "0.1.0"
description = "Quality-metrics for FREG"
authors = ["Ole Bredesen-Vestby <obv@ssb.no>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"
python-json-logger = "^2.0.2"
prometheus-fastapi-instrumentator = "^5.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
pycrunch-engine = "^1.4"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
