[tool.poetry]
name = "freg_quality_metrics"
version = "0.1.1"
description = "Quality-metrics for FREG"
authors = ["Ole Bredesen-Vestby <obv@ssb.no>"]

packages = [
    { include = "freg_quality_metrics" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
gunicorn = "^20.1.0"
python-json-logger = "^2.0.4"
prometheus-fastapi-instrumentator = "^5.9.1"
Flask = "^2.2.2"
prometheus-client = "^0.15.0"
pandas = "^1.5.1"
APScheduler = "^3.9.1.post1"
uwsgi = {version = "^2.0.21", markers = "sys_platform != 'win32'"}
flask-wtf = "^1.0.1"
google-cloud-bigquery = {extras = ["pandas"], version = "^3.3.6"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
pre-commit-hooks = "^4.3.0"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
pycrunch-engine = "^1.4"
requests = "^2.28.1"
poetryup = "^0.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2
